--- a/android/sample/src/main/res/values/strings.xml
+++ b/android/sample/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MGTV</string>
-    <string name="enter_hera">芒果小程序</string>
+    <string name="enter_hera">小程序</string>
     <string name="open_page_for_result">openPageForResult示例</string>
     <string name="set_result">返回页面结果</string>
 </resources>
